--- a/examples-staging/basic/Dockerfile
+++ b/examples-staging/basic/Dockerfile
@@ -4,13 +4,15 @@ COPY . /app
 WORKDIR /app
 
 ENV NODE_ENV production
+ENV SESSION_SECRET 'temporary SESSION_SECRET for build'
 RUN yarn install
 RUN yarn build
 
 # Serve
 FROM node:16-alpine
 
-COPY --from=build /app /
+WORKDIR /app
+COPY --from=build /app .
 
 ENV NODE_ENV production
-CMD ["yarn", "keystone-next", "start"]
+CMD ["yarn", "keystone", "start"]
